fix mobile layout problems

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -251,7 +251,15 @@ html,body {
     #header,
     #footer,
     #content {
-        left: 20px;
+        left: 5px;
+    }
+    
+    #footer {
+      bottom: 3px;
+    }
+    
+    #content {
+        right: 5px;
     }
 }
 
